# instruct_pipeline

./: .gitignore  .gitmodules  README.md  pyproject.toml  sky_interactive.yaml  sky_job.yaml
adversary/: __init__.py  adversary_loop.py  prompts.py  tools.py
dev/: prompts.py  qwen2.5_template.py  qwen_template.py
dev/adversary/: adversary_loop.py  tools.py
dev/grpo/: reward_function.py  run.py  test_rf.py
dev/induced_instruction/: align_dataset.py  batch_create_instruction.py  batch_utils.py  create_instruction.py  judge_dataset.py  judge_qwen.py  qwen_assistant_response.py  test_llm_judge.py  tools.py
dev/sft/: QwenTemplateAndSchema.py  deepspeed_offload.yaml  deepspeed_zero3.yaml  huggingfacetest.py  schema.py  sft.py
scripts/: test.py  train.sh
tool_adversary/: __init__.py  adversary_loop.py  tools.py
train_exclamations/: grpo.sh  parse_test_nq.py  plot_experiment.py  test_nq_grpo.py  test_nq_grpo.sh  test_nq_sft.py  test_nq_sft.sh  train_grpo.py  train_nq_grpo.py  train_nq_sft.py  train_nq_sft.sh  train_test.sh
