[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flash-attn>=2.7.4.post1",
    "huggingface-hub>=0.30.1",
    "ninja>=1.11.1.4",
    "packaging>=24.2",
    "sglang[all]>=0.4.4.post4",
    "torch",
    "torchaudio",
    "torchvision",
    "trl",
    "vllm>=0.7.2",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dev"]

[tool.wheel]
include = ["dev"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
package = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
trl = { path = "Trl", editable = true }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
