[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepspeed>=0.16.6",
    "huggingface-hub>=0.30.1",
    "ninja>=1.11.1.4",
    "packaging>=24.2",
    "scrapfly-sdk>=0.8.21",
    "sglang[all]>=0.4.4.post4",
    "tenacity>=9.1.2",
    "torch",
    "torchaudio",
    "torchvision",
    "trl",
    "vllm>=0.7.2",
    "wandb>=0.19.9",
    "flash-attn>=2.7.4.post1",
    "pudb>=2024.1.3",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dev"]

[tool.wheel]
include = ["dev"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
package = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
trl = { path = "Trl", editable = true }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
