[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepspeed==0.15.3",
    "huggingface-hub>=0.30.1",
    "ninja>=1.11.1.4",
    "packaging>=24.2",
    "tenacity>=9.1.2",
    "torch",
    "torchaudio",
    "torchvision",
    "trl",
    "vllm>=0.7.2",
    "wandb>=0.19.9",
    "pudb>=2024.1.3",
    "peft>=0.15.2",
    "anthropic>=0.49.0",
    "setuptools",
    "readability-lxml>=0.8.1",
    "markdownify>=1.1.0",
    "beautifulsoup4>=4.13.4",
    "lxml-html-clean>=0.4.2",
    "playwright>=1.51.0",
    "scrapfly-sdk>=0.8.23",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dev"]

[tool.wheel]
include = ["dev"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
package = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
trl = { path = "Trl", editable = true }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.optional-dependencies]
compile = ["flash-attn>=2.7.4.post1"]
